--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require("path")
 const appDir = path.join(__dirname, 'app')
-const configDir = path.join(__dirname, 'config')
-const dbDir = path.join(__dirname, 'db')
+const configDir = path.join(__dirname, 'app/configs')
+const dbDir = path.join(__dirname, 'app/db')
 
 module.exports = {
   'config': path.join(configDir, 'database.json'),
