--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "db:seed": "sequelize db:seed:all",
     "db:init": "npm run db:create && npm run db:migrate && npm run db:seed",
     "db:remake": "npm run db:drop && npm run db:init",
+    "db:migrate:user": "sequelize db:migrate --to 20240116042837-create-user.js",
+    "db:rollback:user": "sequelize db:migrate:undo:all --to 20240116042837-create-user.js",
+    "db:recreate:user": "npm run db:rollback:user && npm run db:migrate:user",
     "db:migrate:product": "sequelize db:migrate --to 20240116042457-create-product.js",
     "db:rollback:product": "sequelize db:migrate:undo:all --to 20240116042457-create-product.js",
     "db:recreate:product": "npm run db:rollback:product && npm run db:migrate:product",
@@ -31,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2"
