Update update file to delete previos file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "strict": true,
     "lib": ["esnext"],
     "esModuleInterop": true,
+    "moduleDetection": "auto",
+    "moduleResolution": "Node",
     "target": "ES2021"
   }
 }
