--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "strict": true,
     "lib": ["esnext"],
     "esModuleInterop": true,
-    "moduleDetection": "auto",
+    "moduleDetection": "force",
     "moduleResolution": "Node",
     "target": "ES2021"
   }
